--- a/style/style.css
+++ b/style/style.css
@@ -4,13 +4,10 @@
     padding: 0;
     font-family: noto sans;
 }
-
 .header{
     background-image: url(../assets/images/Fondo.png);
     height: 80vh;
 }
-
-
 .navbar{
     padding: 50px;
     display: flex;
@@ -32,7 +29,7 @@
     color: white;
 
 }
-.links button{
+.btn-principal{
     background-color: transparent;
     color: #00aaff;
     border: 1px solid #00aaff ;
@@ -45,23 +42,19 @@
   justify-content: center;
   align-items: center;
 }
-
 .text-box {
   background-color: rgba(40, 60, 80, 0.8);
   margin: 10px 0;
   padding: 20px 50px;
 }
-
 .text-box p {
   font-size: 28px;
   letter-spacing: 1px;
 }
-
 .info{
     background-color: #00aaff;
     color: white;
 }
-
 .info-grid{
     display: grid;
     grid-template-rows: repeat(4 1fr);
@@ -70,11 +63,9 @@
     margin: 0 auto;
     gap: 20px;
 }
-
 .coffee{
     grid-column: 1/2;
 }
-
 .instant{
     grid-column: 2/3;
 }
@@ -84,8 +75,359 @@
 .frame{
     grid-column: 4/5;
 }
-
 .coffee h3 , .instant h3 , .serious h3, .frame h3{
     margin-top: 15px;
     margin-bottom: 15px;
 }
+.images{
+    padding: 90px;
+}
+.nav2{
+    display: flex;
+    justify-content: space-around;
+}
+.nav2 h1{
+    color: gray;
+    font-weight: lighter;
+}
+.linea{
+    border: 1px solid gray;
+    width: 60px;
+}
+.links-portofolio{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.links-portofolio a{
+    text-decoration: none;
+    color: gray;
+}
+.image-grid{
+    padding: 70px;
+    display: grid;
+    grid-template-columns: 270px 270px 270px 270px;
+    grid-template-rows: 1fr 1fr ;
+    gap: 20px;
+    justify-content: center;
+}
+.video{
+    display: flex;
+    justify-content: space-evenly;
+    background-color:rgb(81, 95, 103);
+    padding: 50px;
+}
+.text-video h1{
+    font-weight: lighter;
+}
+.text-video{
+    width: 500px;
+    color: white;
+    font-weight: lighter;
+}
+.linea-blanca{
+    border: 1px solid white ;
+    width: 50px;
+}
+.text-video p{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.visit{
+    padding: 10px 30px ;
+    background-color: transparent;
+    border: 2px solid rgb(48, 46, 46);
+    color:rgb(48, 46, 46) ;
+}
+.twitter{
+    background-color: #00aaff;
+    padding: 50px;
+    color: white;
+}
+.twit{
+    display: flex;
+    justify-content: space-around;
+}
+.twit h1{
+     font-weight: lighter;
+}
+.text-twit{
+    display: flex;
+    justify-content: center;
+    padding:20px 295px;
+}
+.text-twit p{
+    font-size: 30px;
+    font-weight: lighter;
+}
+.text-twit span{
+    font-weight: bold;
+}
+.redes{
+    background-image: url(../assets/images/bg_whoIs.png);
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+    font-weight: lighter;
+    padding: 70px;
+    padding-bottom: 100px;
+}
+.redes-izq{
+    width: 500px;
+}
+.redes-izq h1{
+    font-weight: lighter;
+}
+.redes-der{
+    width: 500px;
+}
+
+.redes-izq p{
+    padding-top: 30px;
+}
+
+.redes-der p{
+    padding-top: 70px;
+    padding-bottom: 40px;
+}
+.testimonios{
+    padding: 40px;
+}
+.comillas p{
+    font-size: 90px;
+    color: gray;
+}
+.text-testi{
+    padding-inline: 278px;
+    color: gray;
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+.testimonios span{
+    color: #00aaff;
+    padding-inline: 275px;
+}
+
+.seccion-contacto {
+  background-image: url(../assets/images/bg_contact.png);
+  background-size: cover;
+  background-position: center;
+  padding: 60px 20px;
+  color: white;
+}
+.contenedor-contacto {
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+}
+.titulo-contacto {
+  border-bottom: 2px solid white;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  width: fit-content;
+}
+
+.formulario-contacto {
+  display: grid;
+  gap: 20px;
+}
+
+.campo {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.entrada {
+  background: transparent;
+  border: 2px solid white;
+  padding: 12px;
+  color: white;
+}
+.contenedor-mensaje {
+  grid-column: 1 / 3;
+}
+
+.mensaje {
+  background: transparent;
+  border: 2px solid white;
+  padding: 12px;
+  color: white;
+  height: 250px;
+  resize: vertical;
+}
+
+.contenedor-boton {
+  grid-column: 1 / 3;
+}
+
+.boton-enviar {
+  background: #3ed0ff;
+  border: none;
+  padding: 16px 90px;
+  color: white;
+  cursor: pointer;
+}
+.columna-derecha p {
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
+.pArriba{
+    margin-top: 83px;
+}
+.footer {
+    background: #333d46;
+    padding: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer-menu {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.footer-menu a {
+    color: #8a96a0;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.footer-menu span {
+    color: #8a96a0;
+    font-size: 14px;
+}
+
+.footer-copy {
+    color: #8a96a0;
+    font-size: 14px;
+}
+
+@media(max-width:1279px){
+    .image-grid{
+        grid-template-columns:  270px 270px 270px;
+    }
+    .text-testi{
+        padding-inline: 0;
+    }
+    .text-twit{
+        padding: 30px 20px ;
+    }
+    .video img{
+        width: 400px;
+    }
+    .info-grid{
+        grid-template-columns: 365px 365px ;
+        grid-template-rows: 215px 215px ;
+        gap: 40px;
+        margin: 0 0 ;
+    }
+    .serious{
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    .frame{
+        grid-row: 2/3;
+        grid-column: 2/3;
+    }
+    .redes{
+        background-position: center;
+    }
+    .testimonios span{
+        padding-inline: 10px;
+    }
+}
+@media(max-width:920px){
+    .image-grid{
+        grid-template-columns: 270px 270px ;
+    }
+    .info-grid{
+        grid-template-columns: 270px 270px;
+        grid-template-rows: repeat(4, 215px) ;
+        gap: 40px;
+        margin: 0 0 ;
+    }
+    .nav2{
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+    .boton-enviar{
+        padding: 16px 150px;
+    }
+}
+@media(max-width:768px){
+    .navbar{
+        flex-direction: column;
+        align-items: center;
+    }
+    .info-grid{
+    grid-template-columns: 270px;
+    grid-auto-rows: auto;
+    gap: 40px;
+    width: fit-content;
+    margin: 0 auto;
+    text-align: center;
+    }
+    .instant{
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+    .frame{
+        grid-row: 4/5;
+        grid-column: 1/2;
+    }
+    .image-grid{
+        grid-template-columns: 270px ;
+    }   
+    .video{
+        flex-wrap: wrap;
+    }
+    .visit{
+        margin-bottom:20px ;
+    }
+    .text-twit{
+        padding: 15px 0;
+    }
+    .redes{
+        flex-wrap: wrap;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .boton-enviar{
+        padding: 16px 190px;
+    }
+}
+@media(max-width:480px){
+    .info-grid{
+        padding: 90px 10px;
+    }
+    .video img{
+        width: 100%;
+    }
+    .boton-enviar{
+        padding: 16px 130px;
+    }
+    .links-portofolio{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .links{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .text-box{
+        text-align: center;
+    }
+    .boton-enviar{
+        padding: 16px 128px;
+    }
+    .footer{
+        flex-wrap: wrap;
+    }
+}   
